<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.e_commerceapp2.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_category"
        android:name="com.example.e_commerceapp2.ui.category.DashboardFragment"
        android:label="@string/title_category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.example.e_commerceapp2.ui.cart.NotificationsFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.e_commerceapp2.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_account" />
    <fragment
        android:id="@+id/navigation_loggedIn_profile"
        android:name="com.example.e_commerceapp2.LoggedInProfileFragment"
        android:label="@string/welcome"
        tools:layout="@layout/fragment_logged_in_profile" />
</navigation>